--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -963,7 +963,7 @@
                                     <constraint firstAttribute="width" constant="250" id="kdF-od-7Tm"/>
                                     <constraint firstAttribute="height" constant="30" id="qX7-Fc-4Db"/>
                                 </constraints>
-                                <state key="normal" title="More left to pickup">
+                                <state key="normal" title="There’s more to pickup">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="default">
@@ -1432,7 +1432,7 @@
             </objects>
             <point key="canvasLocation" x="6933" y="-1280"/>
         </scene>
-        <!--All reports-->
+        <!--Reports-->
         <scene sceneID="9ia-57-xvD">
             <objects>
                 <viewController id="Jy6-C0-m1v" customClass="FCPublicationReportsTVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
@@ -1544,7 +1544,7 @@
                             <constraint firstItem="9Yv-ga-v8S" firstAttribute="top" secondItem="m9U-i1-UAY" secondAttribute="top" id="YP4-ar-T6W"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="All reports" id="X9g-Fl-nzX">
+                    <navigationItem key="navigationItem" title="Reports" id="X9g-Fl-nzX">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="fqk-Lk-drl">
                             <connections>
                                 <action selector="dismiss" destination="Jy6-C0-m1v" id="qtN-tM-d4Y"/>
